# plugin-ide-checkout

./: .gitignore  API.md  Cargo.toml  Makefile  README.md  config.json  daemon.sh  plugin.toml  qol-config.toml  run.sh  server.py
src/: main.rs
